--- a/index.html
+++ b/index.html
@@ -27,6 +27,6 @@
   <h1>Welcome to the Home Page!</h1>
 </div>
 
-<script src="home.js"></script>
+<script src=".//home.js"></script>
 </body>
 </html>
